[tool.poetry]
name = "sunrun"
version = "0.1.0"
description = ""
authors = ["Hugo Selbie"]
license = "none"

[tool.poetry.dependencies]
python = "^3.7"
looker-sdk = "^0.1.3-beta.20"
spectacles = "^0.3.0"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
